fixed whitespace that appeared on right side of screen and whitespace that appeared on left side of margin

--- a/wp-content/themes/Nature-wp-theme/NatureWPTheme_v1.9/css/nature_style_light.css
+++ b/wp-content/themes/Nature-wp-theme/NatureWPTheme_v1.9/css/nature_style_light.css
@@ -1,5 +1,6 @@
 /* Global Styles
 -------------------------------------------------- */
+html, body { overflow-x: hidden; }
 body {
 	font-size:12px;
 	color:#8a8a8a;
@@ -1491,6 +1492,7 @@ div.comments-list:nth-child(even) {
 /*		background:url(../img/section-arrow.png) no-repeat bottom center;*/
 		padding-bottom:0px;
 		width:100%;
+        left: 0;
 	}
 	.navbar .is-sticky ul.nav {
 		background:url(../img/navbar-bottom.jpg) repeat top center;
